--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "my first socket.io app",
 	"dependencies": {
 		"express": "^4.18.2",
+		"node-modules": "^1.0.1",
 		"socket.io": "^4.6.1"
 	}
 }
